--- a/res/MainUi.glade
+++ b/res/MainUi.glade
@@ -3,20 +3,23 @@
 <interface>
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkBox" id="box_ui">
+    <property name="width_request">1000</property>
+    <property name="height_request">500</property>
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="margin_left">8</property>
-    <property name="margin_right">8</property>
-    <property name="margin_top">8</property>
-    <property name="margin_bottom">8</property>
+    <property name="halign">center</property>
+    <property name="valign">center</property>
     <property name="hexpand">True</property>
     <property name="vexpand">True</property>
+    <property name="border_width">10</property>
     <property name="orientation">vertical</property>
     <property name="spacing">8</property>
     <child>
       <object class="GtkLabel">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
+        <property name="margin_top">10</property>
+        <property name="margin_bottom">40</property>
         <property name="label" translatable="yes">Menu Principal</property>
       </object>
       <packing>
@@ -27,15 +30,15 @@
     </child>
     <child>
       <object class="GtkButton">
-        <property name="label" translatable="yes">Productos</property>
+        <property name="label" translatable="yes">Clientes</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">True</property>
-        <property name="margin_left">10</property>
-        <property name="margin_right">53</property>
+        <property name="margin_left">200</property>
+        <property name="margin_right">200</property>
         <property name="hexpand">True</property>
-        <signal name="activate" handler="btn_productos_act" swapped="no"/>
-        <signal name="clicked" handler="btn_productos_act" swapped="no"/>
+        <signal name="activate" handler="btn_clientes_act" swapped="no"/>
+        <signal name="clicked" handler="btn_clientes_act" swapped="no"/>
       </object>
       <packing>
         <property name="expand">False</property>
@@ -45,19 +48,21 @@
     </child>
     <child>
       <object class="GtkButton">
-        <property name="label" translatable="yes">Clientes</property>
+        <property name="label" translatable="yes">Productos</property>
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">True</property>
-        <property name="margin_bottom">2</property>
+        <property name="margin_left">200</property>
+        <property name="margin_right">200</property>
+        <property name="margin_top">10</property>
         <property name="hexpand">True</property>
-        <signal name="activate" handler="btn_clientes_act" swapped="no"/>
-        <signal name="clicked" handler="btn_clientes_act" swapped="no"/>
+        <signal name="activate" handler="btn_productos_act" swapped="no"/>
+        <signal name="clicked" handler="btn_productos_act" swapped="no"/>
       </object>
       <packing>
         <property name="expand">False</property>
         <property name="fill">True</property>
-        <property name="position">3</property>
+        <property name="position">2</property>
       </packing>
     </child>
     <child>
@@ -66,8 +71,9 @@
         <property name="visible">True</property>
         <property name="can_focus">True</property>
         <property name="receives_default">True</property>
-        <property name="margin_left">20</property>
-        <property name="margin_right">10</property>
+        <property name="margin_left">200</property>
+        <property name="margin_right">200</property>
+        <property name="margin_top">250</property>
         <property name="hexpand">True</property>
         <signal name="activate" handler="btn_reportes_act" swapped="no"/>
         <signal name="clicked" handler="btn_reportes_act" swapped="no"/>
@@ -75,7 +81,7 @@
       <packing>
         <property name="expand">False</property>
         <property name="fill">True</property>
-        <property name="position">4</property>
+        <property name="position">3</property>
       </packing>
     </child>
   </object>
