--- a/res/VistaUi.glade
+++ b/res/VistaUi.glade
@@ -3,22 +3,20 @@
 <interface>
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkBox" id="box_ui">
+    <property name="width_request">1000</property>
+    <property name="height_request">500</property>
     <property name="visible">True</property>
     <property name="can_focus">False</property>
-    <property name="margin_left">8</property>
-    <property name="margin_right">8</property>
-    <property name="margin_top">8</property>
-    <property name="margin_bottom">8</property>
     <property name="hexpand">True</property>
     <property name="vexpand">True</property>
+    <property name="border_width">10</property>
     <property name="spacing">8</property>
     <child>
       <object class="GtkBox" id="elementos_box">
-        <property name="height_request">200</property>
+        <property name="width_request">900</property>
+        <property name="height_request">480</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="margin_top">5</property>
-        <property name="margin_bottom">5</property>
         <property name="hexpand">True</property>
         <property name="vexpand">True</property>
         <property name="orientation">vertical</property>
@@ -34,10 +32,10 @@
     </child>
     <child>
       <object class="GtkBox">
+        <property name="width_request">100</property>
+        <property name="height_request">480</property>
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <property name="margin_top">12</property>
-        <property name="margin_bottom">12</property>
         <property name="orientation">vertical</property>
         <child>
           <object class="GtkButton" id="btn_agregar">
@@ -98,7 +96,7 @@
             <property name="visible">True</property>
             <property name="can_focus">True</property>
             <property name="receives_default">True</property>
-            <property name="margin_top">292</property>
+            <property name="margin_top">324</property>
             <signal name="activate" handler="btn_volver_act" swapped="no"/>
             <signal name="clicked" handler="btn_volver_act" swapped="no"/>
           </object>
